--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tauri-apps/api": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1"
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#dev"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.6",
